--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+- none
 
 resources:
 - repo: self
@@ -11,17 +11,16 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '1a1ae89c-3127-408c-9bee-359ea3d1016a'
+  vmImageName: 'ubuntu-latest' # name of your VM
+  envName: 'selvan123MicroservicesQuickStart'
+  resourceName: 'default'
   imageRepository: 'selvanmicroservicesquickstart'
   containerRegistry: 'acrselvantest.azurecr.io'
-  dockerfilePath: 'Dockerfile'
-  envName: 'selvan123MicroservicesQuickStart'
-  resourceName: 'demoapp'
-  
+  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'my-app-secret' # image pull secret
   
   # Agent VM image name
-  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
@@ -41,23 +40,57 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-     
-    - task: KubernetesManifest@0
-      displayName: Create imagePullSecret
+    
+    - task: CopyFiles@2
       inputs:
-        action: createSecret
-        secretName: $(imagePullSecret)
-        dockerRegistryEndpoint: $(dockerRegistryServiceConnection) 
-        kubernetesServiceConnection: aks1-demoapp1
+        SourceFolder: '$(System.DefaultWorkingDirectory)/k8s'
+        Contents: |
+          *.yaml
+        TargetFolder: '$(System.DefaultWorkingDirectory)/Manifest'
+    - task: PublishBuildArtifacts@1
+      displayName: Publish package ready for deployment
+      inputs:
+        
+        PathtoPublish: '$(System.DefaultWorkingDirectory)/Manifest'
+        artifactName: 'drop'
+- stage: Deploy
+  displayName: Deploy stage
+  dependsOn: Build
 
-    - task: KubernetesManifest@0
-      displayName: Deploy to Kubernetes cluster
-      inputs:
-        action: deploy
-        manifests: |
-          $(System.DefaultWorkingDirectory)/k8s/*.yaml                        
-        imagePullSecrets: |
-          $(imagePullSecret)
-        containers: |
-          $(containerRegistry)/$(imageRepository):$(tag)
-        kubernetesServiceConnection: aks1-demoapp1
+  jobs:
+  - deployment: Deploy
+    condition: and(succeeded(), not(startsWith(variables['Build.SourceBranch'], 'refs/pull/')))
+    displayName: Deploy
+    pool:
+      vmImage: $(vmImageName)
+    environment: $(envName).$(resourceName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          # - task: DownloadBuildArtifacts@0
+          #   displayName: 'Download the build artifacts'
+          #   inputs:
+          #         buildType: 'current'
+          #         downloadType: 'single'
+          #         artifactName: 'drop'
+          #         downloadPath: '$(System.ArtifactsDirectory)'
+          - task: KubernetesManifest@0
+            displayName: Create imagePullSecret
+            inputs:
+              action: createSecret
+              secretName: $(imagePullSecret)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)       
+
+          - task: KubernetesManifest@0
+            displayName: Deploy to Kubernetes cluster
+            inputs:
+              action: deploy
+              manifests: |
+                $(Agent.BuildDirectory)/drop/*.yaml                                
+              imagePullSecrets: |
+                $(imagePullSecret)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
+                
+              
