--- a/k8s/swagger-api-deployment.yaml
+++ b/k8s/swagger-api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: swagger-api-deployment
-  namespace: swaggerapp
+  namespace: default
   labels: {
     "type" : "server",
     "env" : "multi"
