--- a/k8s/swagger-api-service.yaml
+++ b/k8s/swagger-api-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: swagger-api-service
-  namespace: swaggerapp
+  namespace: default
   labels: {
     "type" : "server",
     "env" : "multi"
@@ -13,5 +13,4 @@ spec:
   ports:
   - port: 8080
     targetPort: 8080
-    nodePort: 31516
-  type: NodePort
+  type: LoadBalancer
